[package]
name = "nft_mint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.14.17"
winnow="=0.4.1"
toml_datetime="=0.6.1"
mpl-candy-machine-core = { version = "1.0.4", features = ["cpi"]}
mpl-candy-guard = { version = "1.1.1", features = ["cpi"]}
mpl-token-metadata = { version = "1.9.1", features = ["no-entrypoint"] }
blake3 = "=1.3.1"
ahash = "=0.8.6"